Squashed commit of the following:
commit 1cfdff1b084db99908842302f77f202ccbf3e27b
Author: Souleiman Benhida <souleben@gmail.com>
Date:   Thu Aug 13 17:15:34 2020 -0400

    Add OIDC Discovery for the Device Authorization Endpoint

    Update the example project to support discovery

commit 785076dc83d6ac28a81722e8c38f7cde2975063f
Author: Souleiman Benhida <souleben@gmail.com>
Date:   Tue Aug 11 19:46:40 2020 -0400

    Add updated tvOS example project

commit 9ec12f64c4749b8390c958d0e338220b7f7572b5
Author: Souleiman Benhida <souleben@gmail.com>
Date:   Fri Aug 7 13:45:54 2020 -0400

    Add OIDTVAuthorizationResponse tests

commit a8ab285a9a2149c7f8f523e2475d61d6e747cc6a
Author: Souleiman Benhida <souleben@gmail.com>
Date:   Wed Aug 5 14:44:03 2020 -0400

    Update for RFC compliance, use new OIDTVTokenRequest class

commit 82bbdd499041f8629ba7d104ce0dfb011ce3d25a
Author: Souleiman Benhida <souleben@gmail.com>
Date:   Fri Jul 31 14:58:23 2020 -0400

    Add OIDTVTokenRequest tests

commit 66da4087d35ae1e8907171ba49c5de7ad5a56ecc
Author: Souleiman Benhida <souleben@gmail.com>
Date:   Wed Jul 29 15:51:14 2020 -0400

    Add OIDTVTokenRequest class

    Adds OIDTVTokenRequest class, which is a subclass of OIDTokenRequest, to better adhere to the [RFC for TV authentication](https://tools.ietf.org/html/rfc8628#section-3.4). This adds the required `device_code` property which is sent in the request body, which differs from the `code` property for the authorization code in the parent class. Additionally, the grant type for TV authorization is hard-coded in, and several unused fields are dropped from the initializer and body request code.

commit ecd9f2e46935d11c1430fbf518607797d8b89583
Author: Souleiman Benhida <souleben@gmail.com>
Date:   Wed Jul 22 15:36:53 2020 -0400

    Add AppAuthTV tests

    * OIDTVAuthorizationRequest tests
    * Add tests to AppAuthTVScheme
    * add AppAuthTV to .travis.yml

commit 9a3a8022428370f18574789765217b8644be6a33
Author: Souleiman Ben

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ jobs:
         - SCHEME=AppAuth_macOS DESTINATION="'platform=macOS,arch=x86_64'" SDK=macosx10.15
         - SCHEME=AppAuth-tvOS DESTINATION="'platform=tvOS Simulator,name=Apple TV,OS=13.0'" SDK=appletvsimulator13.0
         - SCHEME=AppAuth_tvOS DESTINATION="'platform=tvOS Simulator,name=Apple TV,OS=13.0'" SDK=appletvsimulator13.0
+        - SCHEME=AppAuthTV DESTINATION="'platform=tvOS Simulator,name=Apple TV,OS=13.0'" SDK=appletvsimulator13.0
       before_script:
         - sudo gem install xcpretty
       script:
